[gd_scene load_steps=29 format=3 uid="uid://rr3wv0faqipj"]

[ext_resource type="Texture2D" uid="uid://n4orro4j65ir" path="res://assets/boss/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="1_lfbua"]
[ext_resource type="Script" path="res://scripts/golem_boss.gd" id="1_n03dd"]
[ext_resource type="Texture2D" uid="uid://yk6vjg4l2gnl" path="res://assets/boss/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" id="2_s1qq3"]
[ext_resource type="Script" path="res://scripts/finite_state_machine.gd" id="3_6lb58"]
[ext_resource type="Script" path="res://scripts/idle.gd" id="4_ba5vp"]
[ext_resource type="Script" path="res://scripts/follow.gd" id="6_tamta"]
[ext_resource type="Script" path="res://scripts/melee_attack.gd" id="7_h7ayo"]
[ext_resource type="Script" path="res://scripts/homing_missile.gd" id="8_rvmtu"]
[ext_resource type="PackedScene" uid="uid://p28mihxthfm6" path="res://scenes/bullet.tscn" id="9_qcsjt"]
[ext_resource type="Script" path="res://scripts/laser_beam.gd" id="10_b80ns"]
[ext_resource type="Script" path="res://scripts/armor_buff.gd" id="11_2cd1a"]
[ext_resource type="Script" path="res://scripts/dash.gd" id="11_6h8v3"]
[ext_resource type="Script" path="res://scripts/death.gd" id="13_yj5b3"]

[sub_resource type="Animation" id="Animation_la6wo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5leic"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1n6ep"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_up7f2"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n0qos"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t0iao"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_edwfk"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}

[sub_resource type="Animation" id="Animation_fftso"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_drh5e"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_epng6"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gybui"]
_data = {
"RESET": SubResource("Animation_la6wo"),
"armor_buff": SubResource("Animation_5leic"),
"block": SubResource("Animation_1n6ep"),
"death": SubResource("Animation_up7f2"),
"glowing": SubResource("Animation_n0qos"),
"idle": SubResource("Animation_t0iao"),
"laser": SubResource("Animation_edwfk"),
"laser_cast": SubResource("Animation_fftso"),
"melee_attack": SubResource("Animation_drh5e"),
"ranged_attack": SubResource("Animation_epng6")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_by5jg"]
radius = 23.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m65at"]
radius = 161.066

[sub_resource type="CircleShape2D" id="CircleShape2D_ud13o"]
radius = 25.8527

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryn2p"]
bg_color = Color(1, 0, 0, 1)

[node name="GolemBoss" type="CharacterBody2D"]
scale = Vector2(6, 6)
collision_layer = 576
collision_mask = 3
script = ExtResource("1_n03dd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = ExtResource("1_lfbua")
hframes = 10
vframes = 10

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(3.16667, -15.3333)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
texture_filter = 1
position = Vector2(97, 16)
texture = ExtResource("2_s1qq3")
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gybui")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_by5jg")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_m65at")

[node name="PlayerHit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHit"]
position = Vector2(0.666667, 0.166667)
shape = SubResource("CircleShape2D_ud13o")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_6lb58")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_ba5vp")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_tamta")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_h7ayo")

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_rvmtu")
bullet_node = ExtResource("9_qcsjt")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_b80ns")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_2cd1a")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_6h8v3")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_yj5b3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
texture_filter = 1
custom_minimum_size = Vector2(200, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -463.0
offset_top = -39.0
offset_right = -202.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_ryn2p")
value = 100.0

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerHit" to="." method="_on_player_hit_body_entered"]
